# fastapi_blog

./: .env.example  .gitignore  AGENTS.md  CLAUDE.bak.md  CLAUDE.md  COMMIT_EDITMSG  GEMINI.md  README.md  alembic.ini  docker-compose.yml  fastapi_blog.code-workspace  pyproject.toml
.agent/bak/: AGENTS.bak.md
.agent/rules/: agent.md
.cursor/commands/: clear.md  explain.md  review.md
.github/: copilot-instructions.md
.kiro/specs/crud-post-optimization/: requirements.md
alembic/: env.py
alembic/versions/: 20251005_0604_2e3ee01bbf0e_add_deleted_at_field_to_users.py  20251020_2256_a14028f2192b_add_post_like_and_favorite_tables.py  20251027_1132_0c503c0a63ca_add_session_id_to_post_view_and_enhance_.py  20251028_1449_8437fc376ae6_add_follows_and_notifications_tables.py  20251028_2252_7f3a7beee231_add_users_bio_column.py  b9cf7908383e_initial_migration_create_all_tables.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  pagination.py
app/api/v1/: api.py
app/core/: config.py  email_utils.py  exceptions.py  pagination.py  security.py  time_utils.py
app/crud/: __init__.py  base.py  comment.py  follow.py  notification.py  pagination.py  post.py  post_favorite.py  post_like.py  post_view.py  tag.py  user.py
app/db/: __init__.py  database.py  redis_client.py
app/models/: __init__.py  comment.py  follow.py  notification.py  post.py  post_favorite.py  post_like.py  post_view.py  tag.py  user.py  user_traditional.py
app/schemas/: __init__.py  comment.py  common.py  follow.py  notification.py  post.py  post_view.py  tag.py  user.py
app/templates/: email_template.html
docs/: README.md
docs/.obsidian/: community-plugins.json  workspace.json
docs/database/: README.md  initial_schema.sql
docs/design/: Phase2_Database表模型设计.md  Phase2_数据库表模型设计.md  Phase3_Pydantic模型设计.md  Phase4_Alembic数据库迁移设计.md  Phase5-API完善概设.md  Phase5_CORS 跨域资源共享.md  Phase5_全局异常处理.md  Phase5_用户资料管理.md  Phase5_用户资料管理设计.md  Phase6_文章管理设计.md  final_code_review.md  phase6_2_点赞收藏概设.md
docs/design/phase2_数据库设计与连接/: 02-Alembic数据库迁移详解.md  03_项目环境变量配置指南.md
docs/design/phase3_认证系统/: 01-密码安全与哈希机制.md  02-JWT认证机制详解.md  03-Pydantic数据验证与Schema设计.md  (+1 more)
docs/design_backend/: Database表模型设计.md  后端架构设计--未完待续.md
docs/learning/: README.md  fastapi-lifespan-non-blocking-tasks.md  python-generics-and-inheritance.md  项目环境变量配置指南.md
docs/project/: README.md  RSD.md  overview.md  plan.md  plan_frontend.md  process.md  tmp_todo_list.md  todos.md
docs/reference/: web-architecture-best-practices.md
docs/standards/: README.md  alembic-best-practices.md  api-documentation.md  database-models.md  mermaid-diagrams.md  python.md  testing.md
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
frontend/demo/: HistoryTest.vue  line-height-vs-margin.html  livePreview-test.html  myTest.html  myTest.js  offset-test.html  selection.test.html  single-line-lineheight.html
frontend/docs/: README.md  markdown语法测试.md  测试.md
frontend/src/: App.vue  main.ts
scripts/: manual_model_test.py  notify.py  notify.sh  test_models.py
tests/: conftest.py  myTest.py  test.http  test_database.py
tests/test_api/: conftest.py  test_auth.py  test_comments.py  test_deps.py  test_follows.py  test_notifications.py  test_pagination.py  test_post_favorites.py  test_post_likes.py  test_post_views.py  test_posts.py  test_tags.py  test_users.py
tests/test_core/: test_exceptions.py  test_security.py
tests/test_crud/: test_notification.py  test_post.py  test_user.py
tests/test_db/: test_redis.py
tests/test_e2e/: test_auth_flow.py  test_notification_flow.py
tests/test_models/: test_comment.py  test_post.py  test_post_view.py  test_tag.py  test_user.py
tests/test_schemas/: test_comment.py  test_post.py  test_tag.py  test_user.py
tests/test_utils/: test_email_utils.py
(+207 files in other folders)
